--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Get version
         id: get_version
         run: |
-          VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-          echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+          echo "latest_tag=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_ENV
+          echo "latest tag: $latest_tag"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -49,4 +49,4 @@ jobs:
           push: true
           tags: |
             cy01/blackhole:latest
-            cy01/blackhole:${{ steps.get_version.outputs.VERSION }}
+            cy01/blackhole:${{ env.latest_tag }}
