--- a/doc/config.full.json
+++ b/doc/config.full.json
@@ -75,5 +75,6 @@
   "log_level": "info",
   "min_file_size": "",
   "max_file_size": "",
-  "allowed_file_types": []
+  "allowed_file_types": [],
+  "use_auth": false
 }
