--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,4 +1,4 @@
-name: Release
+name: GoReleaser
 
 on:
   push:
@@ -16,20 +16,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.22'
 
-      - name: Set Release Channel
-        run: |
-          if [[ ${{ github.ref }} == refs/tags/beta* ]]; then
-            echo "RELEASE_CHANNEL=beta" >> $GITHUB_ENV
-          else
-            echo "RELEASE_CHANNEL=stable" >> $GITHUB_ENV
-          fi
-          
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
@@ -38,3 +30,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_CHANNEL: stable
