--- a/.github/workflows/beta-docker.yml
+++ b/.github/workflows/beta-docker.yml
@@ -17,17 +17,14 @@ jobs:
       - name: Calculate beta version
         id: calculate_version
         run: |
-          # Get the latest tag
           LATEST_TAG=$(git tag | grep -v 'beta' | sort -V | tail -n1)
           echo "Found latest tag: ${LATEST_TAG}"
           
-          # Split the version
           IFS='.' read -r -a VERSION_PARTS <<< "$LATEST_TAG"
           MAJOR="${VERSION_PARTS[0]}"
           MINOR="${VERSION_PARTS[1]}"
           PATCH="${VERSION_PARTS[2]}"
           
-          # Increment patch version
           NEW_PATCH=$((PATCH + 1))
           BETA_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
           
@@ -40,11 +37,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      # Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push beta Docker image
         uses: docker/build-push-action@v5
@@ -52,7 +66,16 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: cy01/blackhole:beta
+          tags: |
+            cy01/blackhole:beta
+            ghcr.io/${{ github.repository_owner }}/blackhole:beta
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
           build-args: |
             VERSION=${{ env.beta_version }}
             CHANNEL=beta
+
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
