--- a/.github/workflows/beta-docker.yml
+++ b/.github/workflows/beta-docker.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - beta
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   docker:
     runs-on: ubuntu-latest
