Add a precacher to significantly improve importing to arrs/plex

--- a/doc/config.full.json
+++ b/doc/config.full.json
@@ -51,6 +51,7 @@
     "download_folder": "/mnt/symlinks/",
     "categories": ["sonarr", "radarr"],
     "refresh_interval": 5,
+    "skip_pre_cache": false
   },
   "arrs": [
     {
