Fix minor doc issues (#47)
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/doc/config.full.json
+++ b/doc/config.full.json
@@ -56,7 +56,7 @@
   "arrs": [
     {
       "name": "sonarr",
-      "host": "http://radarr:8989",
+      "host": "http://sonarr:8989",
       "token": "arr_key",
       "cleanup": true,
       "skip_repair": true,
@@ -71,7 +71,7 @@
     },
     {
       "name": "lidarr",
-      "host": "http://lidarr:7878",
+      "host": "http://lidarr:8686",
       "token": "arr_key",
       "cleanup": false,
       "skip_repair": true,
