--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Decypharr
-site_url: https://sirrobot01.github.io/debrid-blackhole
+site_url: https://sirrobot01.github.io/decypharr
 site_description: QbitTorrent with Debrid Support
-repo_url: https://github.com/sirrobot01/debrid-blackhole
-repo_name: sirrobot01/debrid-blackhole
+repo_url: https://github.com/sirrobot01/decypharr
+repo_name: sirrobot01/decypharr
 edit_uri: blob/main/docs
 
 
