--- a/.air.toml
+++ b/.air.toml
@@ -7,14 +7,14 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "bash -c 'go build -ldflags \"-X github.com/sirrobot01/decypharr/pkg/version.Version=0.0.0 -X github.com/sirrobot01/decypharr/pkg/version.Channel=dev\" -o ./tmp/main .'"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "data"]
+  exclude_dir = ["tmp", "vendor", "testdata", "data"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", ".json"]
+  include_ext = ["go", "tpl", "tmpl", "html", ".json", ".js", ".css", ".scss", ".ts", ".tsx", ".vue"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
