Move to tailwind-build instead of CDNs

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,27 @@ torrents.json
 *.json
 .ven/**
 docs/**
+
+
+# Don't copy built assets to avoid conflicts
+pkg/web/assets/build/
+
+# Don't copy node modules
+node_modules/
+
+# Don't copy development files
+.git/
+.gitignore
+*.md
+.env*
+*.log
+
+# Don't copy source assets to the Go builder (they're copied from asset-builder)
+pkg/web/assets/css/
+pkg/web/assets/js/
+pkg/web/assets/images/
+
+# Build artifacts
+decypharr
+healthcheck
+*.exe
